--- a/src/app/home-page/home-page.html
+++ b/src/app/home-page/home-page.html
@@ -1,1 +1,12 @@
-<p>home-page works!</p>
+<div class="home-container">
+  <h1>Bienvenido a Heroes App</h1>
+
+  <h2>Héroes destacados</h2>
+  <ul class="hero-list">
+    <li *ngFor="let hero of heroes">
+      <a routerLink="['/hero', hero.id]" class="hero-link">{{ hero.name }}</a>
+    </li>
+  </ul>
+
+  <a routerLink="/heroes" class="button">Ver todos los héroes</a>
+</div>
