--- a/src/app/pages/heroe-page/heroe-page.css
+++ b/src/app/pages/heroe-page/heroe-page.css
@@ -1,30 +1,38 @@
-.hero-detail {
-  text-align: center;
-  padding: 20px;
-  background: linear-gradient(45deg, #FF99FF, #99CCFF);
-  border-radius: 15px;
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
-}
-
-.hero-detail h1 {
+/* Estilo del título */
+h1 {
   font-size: 2.5em;
   color: #FFDD00;
   text-shadow: 2px 2px black;
   margin-bottom: 15px;
+  text-align: center;
 }
 
-.hero-detail p {
+/* ID del héroe */
+p {
   font-size: 1.3em;
   font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.hero-detail a {
-  display: inline-block;
-  margin: 10px;
-  padding: 8px 15px;
-  background: #00CCFF;
+/* Botones de navegación */
+a[routerLink] {
+  padding: 8px 10px;
+  border-bottom: 2px solid #FFDD00;
+  background: #0075A9;
+  border-radius: 6px;
+  margin: 8px auto;
+  width: 280px;
+  display: block; /* hace que se vean uno debajo del otro */
   color: white;
-  border-radius: 10px;
+  text-decoration: none;
   font-weight: bold;
-  text-shadow: 1px 1px black;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+/* Sin cambios al pasar el ratón */
+a[routerLink]:hover {
+  background: #0075A9;
+  text-decoration: none;
 }
